[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/MainUITheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/FontLarge.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/RulesContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/MultiverseContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Screens/MainMenuScreen.gd" type="Script" id=5]

[node name="MainMenuScreen" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Control" parent="."]
rect_min_size = Vector2( 640, 360 )
theme = ExtResource( 1 )

[node name="Title" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_top = 24.0
margin_right = -128.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "Main Menu"
align = 1

[node name="Buttons" type="VBoxContainer" parent="UI"]
margin_left = 64.0
margin_top = 104.0
margin_right = 184.0
margin_bottom = 144.0
custom_constants/separation = 16

[node name="NewGameButton" type="Button" parent="UI/Buttons"]
unique_name_in_owner = true
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
text = "New Game"

[node name="ControlsButton" type="Button" parent="UI/Buttons"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 120.0
margin_bottom = 96.0
rect_min_size = Vector2( 120, 40 )
text = "How To Play"

[node name="EditShipButton" type="Button" parent="UI/Buttons"]
visible = false
margin_top = 112.0
margin_right = 120.0
margin_bottom = 152.0
rect_min_size = Vector2( 120, 40 )
text = "Edit Ship"

[node name="MultiverseButton" type="Button" parent="UI/Buttons"]
unique_name_in_owner = true
margin_top = 112.0
margin_right = 120.0
margin_bottom = 152.0
rect_min_size = Vector2( 120, 40 )
text = "Multiverse"

[node name="RulesContainer" parent="UI" instance=ExtResource( 3 )]
visible = false
margin_left = 248.0
margin_top = 32.0
margin_right = 608.0
margin_bottom = 328.0

[node name="MultiverseContainer" parent="UI" instance=ExtResource( 4 )]
visible = false
margin_left = 248.0
margin_top = 32.0
margin_right = 608.0
margin_bottom = 328.0

[node name="NewGameContainer" type="Panel" parent="UI"]
margin_left = 248.0
margin_top = 32.0
margin_right = 608.0
margin_bottom = 328.0
rect_min_size = Vector2( 360, 296 )
theme = ExtResource( 1 )

[node name="Header" type="Label" parent="UI/NewGameContainer"]
margin_left = 16.0
margin_top = 23.0
margin_right = 304.0
margin_bottom = 39.0
text = "NEW GAME"

[node name="Root" type="Control" parent="UI/NewGameContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 353.0
margin_bottom = 289.0

[node name="Page01" type="MarginContainer" parent="UI/NewGameContainer/Root"]
margin_left = -7.0
margin_top = 32.0
margin_right = 353.0
margin_bottom = 296.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UI/NewGameContainer/Root/Page01"]
margin_left = 16.0
margin_top = 16.0
margin_right = 344.0
margin_bottom = 248.0
custom_constants/separation = 16

[node name="PlayerStatsHeader" type="Label" parent="UI/NewGameContainer/Root/Page01/VBoxContainer"]
margin_right = 328.0
margin_bottom = 16.0
text = "Start a venture through a new universe."
autowrap = true

[node name="StartButton" type="Button" parent="UI/NewGameContainer/Root/Page01/VBoxContainer"]
unique_name_in_owner = true
margin_left = 104.0
margin_top = 32.0
margin_right = 224.0
margin_bottom = 72.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start"

[node name="LoginLabel" type="Label" parent="UI/NewGameContainer/Root/Page01/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 0.701961, 0.701961, 0.701961, 1 )
margin_top = 88.0
margin_right = 328.0
margin_bottom = 142.0
text = "Not logged in.
Log in to be able to leave messages and contribute to a faction's support."
autowrap = true

[node name="LoginButton" type="Button" parent="UI/NewGameContainer/Root/Page01/VBoxContainer"]
unique_name_in_owner = true
margin_left = 104.0
margin_top = 158.0
margin_right = 224.0
margin_bottom = 198.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 4
text = "Login"

[connection signal="pressed" from="UI/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="UI/Buttons/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="UI/Buttons/MultiverseButton" to="." method="_on_MultiverseButton_pressed"]
[connection signal="pressed" from="UI/NewGameContainer/Root/Page01/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="UI/NewGameContainer/Root/Page01/VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
